--- a/Endpoints/Pages/Shared/Layout/MainLayout.razor
+++ b/Endpoints/Pages/Shared/Layout/MainLayout.razor
@@ -15,20 +15,22 @@
     <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 
-<body hx-boost="true" hx-ext="preload, remove-me">
-    <div class="bg-gray-100 flex flex-col h-screen">
-        <div class="w-full bg-white px-12 py-4">
-            <div class="flex justify-between items-center w-full max-w-6xl mx-auto">
-                <h3 class="text-sm font-medium">Contact Manager</h3>
-                <p class="text-sm">John Doe</p>
+<body hx-push-url="true">
+        <div class="bg-gray-100 flex flex-col h-screen">
+            <div class="w-full bg-white px-12 py-4">
+                <div class="flex justify-between items-center w-full max-w-6xl mx-auto">
+                    <h3 class="text-sm font-medium">Contact Manager</h3>
+                    <p class="text-sm">John Doe</p>
+                </div>
+            </div>
+            <div class="flex flex-grow py-20 px-12">
+                <div class="max-w-6xl mx-auto  w-full">
+                    <div id="content">
+                        @Body
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="flex flex-grow py-20 px-12">
-            <div class="max-w-6xl mx-auto  w-full">
-                @Body
-            </div>
-        </div>
-    </div>
-</body>
+    </body>
 
 </html>
